<resources>
    <string name="app_name">FavoriteApp</string>

    <string name="movie_title">Movie</string>
    <string name="tv_show_title">Tv Show</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">image</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="thumbnail_image">thumbnail iamge</string>
    <string name="popularity">Popularity</string>
    <string name="no_string">-</string>
    <string name="release">Release</string>
    <string name="vote_average">Vote average</string>
    <string name="movie_name">Movie name</string>
    <string name="first_air">First air date</string>
    <string name="tv_show_name">Tv show name</string>
</resources>
