<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.movie.DetailMovieActivity">

    <TextView
            android:text="@string/movie_name"
            android:layout_height="wrap_content"

            android:id="@+id/movie_name" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:layout_width="0dp"
            android:textSize="20sp"/>
    <TextView
            android:text="@string/vote_average"
            android:layout_height="wrap_content"
            android:id="@+id/title_user_score" app:layout_constraintStart_toEndOf="@+id/thumbnail"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/movie_name"
            android:layout_marginStart="16dp" android:layout_width="0dp"/>
    <TextView
            android:text="@string/no_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"

            android:id="@+id/movie_vote" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/thumbnail" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/title_user_score"/>
    <TextView
            android:text="@string/release"
            android:layout_height="wrap_content"
            android:id="@+id/title_lang" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_vote" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/thumbnail"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_width="0dp"/>
    <TextView
            android:text="@string/no_string"
            android:layout_height="wrap_content"
            android:id="@+id/movie_release" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_lang" app:layout_constraintStart_toEndOf="@+id/thumbnail"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_width="0dp"/>
    <ImageView
            android:layout_width="165dp"
            android:layout_height="264dp" tools:srcCompat="@tools:sample/avatars[1]"
            android:id="@+id/thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/movie_name" android:layout_marginTop="16dp"
            android:contentDescription="@string/thumbnail_image"/>
    <TextView
            android:text="@string/popularity"
            android:layout_height="wrap_content"
            android:id="@+id/title_runtime" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/movie_release" app:layout_constraintStart_toEndOf="@+id/thumbnail"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_width="0dp"/>
    <TextView
            android:text="@string/no_string"
            android:layout_height="wrap_content"
            android:id="@+id/movie_popularity" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title_runtime" app:layout_constraintStart_toEndOf="@+id/thumbnail"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_width="0dp"/>

    <TextView
            android:text="@string/no_string"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/movie_overview" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/thumbnail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>