<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:contentDescription="@string/image"
                android:id="@+id/imageview_list"
                android:src="@color/colorPrimary"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/textview_title_list"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold"
                android:text="@string/title"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="parent"
                android:maxLines="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/imageview_list"
                android:layout_marginStart="8dp"/>

        <TextView
                android:id="@+id/textview_description_list"
                android:text="@string/description"
                android:layout_marginTop="10dp"
                android:maxLines="2"
                app:layout_constraintTop_toBottomOf="@id/textview_title_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintStart_toEndOf="@+id/imageview_list"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>